--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TP2</string>
+    <string name="textPrincipal">Titre de ma fenêtre</string>
+    <string name="textAuMilieu">...</string>
+    <string name="laClickasse">Cliqué</string>
 </resources>
