--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="result">Résultat = %f</string>
     <string name="dividedByZero">Division par zéro</string>
     <string name="notSpecified">Une des deux valeurs non spécifiée</string>
+    <string name="calc">Calculer</string>
 </resources>
